# regenbogen

./: LICENSE  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  docs.yml  lint.yml  test.yml
docs/: cnos_pipeline.md  graph_pipeline.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  nodes.rst  quickstart.rst  system_design.rst
examples/: bop_dataset_example.py  cnos_pipeline_example.py  da3_sam3_example.py  da3_video_demo.py  graph_pipeline_example.py  pytorch_style_example.py  sam2_bop_example.py  sam3_bop_example.py  template_rendering_example.py  video_processing_demo.py
regenbogen/: __init__.py
regenbogen/core/: __init__.py  graph_pipeline.py  node.py  pipeline.py
regenbogen/interfaces/: __init__.py  interfaces.py
regenbogen/nodes/: __init__.py  bop_dataset.py  cnos_matcher.py  depth_anything.py  depth_anything3.py  depth_to_pointcloud.py  dinov2.py  icp_refinement.py  mesh_sampling.py  partial_pointcloud_extraction.py  rmse_evaluation.py  sam2.py  sam3.py  spherical_pose_generator.py  template_descriptor.py  template_renderer.py  video_reader.py
regenbogen/utils/: __init__.py  device.py  rerun_logger.py
tests/: test_basic.py  test_bop_dataset.py  test_bop_template_rendering.py  test_cnos_nodes.py  test_cnos_synthetic.py  test_depth_to_pointcloud_filtering.py  test_dinov2.py  test_graph_pipeline.py  test_rerun_integration.py  test_sam2.py  test_sam3.py  test_spherical_pose_orientation.py  test_template_rendering.py  test_video_reader.py
